--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>5.1.8.RELEASE</version>
+			<version>5.2.22.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>5.2.22.RELEASE</version>
 		</dependency>
 <!--        <dependency>-->
 <!--            <groupId>JEECG-os-repository-3.6.5-20160718.JEECG-os-repository.com.google.guava</groupId>-->
